--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.6",
   "license": "MIT",
   "dependencies": {
-    "marked": "^12.0.2"
+    "marked": "^12.0.2",
+    "vitest": "^1.6.0"
   },
   "module": "./dist/markdown-formatter.js",
   "types": "./dist/markdown-formatter.d.ts",
@@ -12,7 +13,6 @@
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@eslint/js": "^9.4.0",
-    "@jest/globals": "^29.7.0",
     "babel-jest": "^29.7.0",
     "eslint": "9.x",
     "globals": "^15.3.0",
@@ -22,7 +22,7 @@
     "typescript-eslint": "^7.12.0"
   },
   "scripts": {
-    "test": "jest",
+    "test": "vitest",
     "lint": "eslint src",
     "prepublish": "tsc"
   },
